# Ghostnet

./: .env.example  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml  test_ghostnet.py
.github/workflows/: ci.yml
client/: ghostnet_client.py
common/: __init__.py  config_handler.py  dns_utils.py  encryption_utils.py
server/: ghostnet_server.py
tests/: test_dns_utils.py  test_encryption.py  test_integration.py
